src/objects/License__c.object
<CustomObject>
    <fields>
        <fullName>Business_Unit_Id__c</fullName>
        <label>Business Unit Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>512</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Effective_Date__c</fullName>
        <label>Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Expiry_Date__c</fullName>
        <label>Expiry Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>License_Copy_Uploaded__c</fullName>
        <label>Lic Copy Uploaded</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>License_File_Id__c</fullName>
        <label>License File Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>License_Id__c</fullName>
        <label>License Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>License_Location__c</fullName>
        <label>License Location</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Locations</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>License_Num__c</fullName>
        <label>License Num</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>License_Number__c</fullName>
        <label>License Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Organization_Id__c</fullName>
        <label>Organization Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <label>License</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Expiry_Date__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>L-{0000}</displayFormat>
        <label>License Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Licenses</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Effective_Date_Must_Be_Before_Expiry</fullName>
        <active>true</active>
        <description>This validation rule will check that the Effective Date is set to be before Expiry Date.</description>
        <errorConditionFormula>AND(
NOT(ISBLANK( Effective_Date__c )),
NOT(ISBLANK( Expiry_Date__c )),
Effective_Date__c  &gt; Expiry_Date__c 
)</errorConditionFormula>
        <errorDisplayField>Effective_Date__c</errorDisplayField>
        <errorMessage>The Effective Date must be before the Expiry Date</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Expiration_Date_Must_Be_In_Future</fullName>
        <active>true</active>
        <description>This validation rule will ensure that the Expiration Date is set in the future.</description>
        <errorConditionFormula>AND(
 NOT(ISBLANK(Expiry_Date__c)),
 Expiry_Date__c &lt; TODAY ()
)</errorConditionFormula>
        <errorDisplayField>Expiry_Date__c</errorDisplayField>
        <errorMessage>You must set an expiration date in the future.</errorMessage>
    </validationRules>
</CustomObject>